// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> opens and closes the <Accordion /> component 1`] = `
<div
  class="accordion__Container-sc-l3iym9-0 hCrOLg"
>
  <div
    class="accordion__Inner-sc-l3iym9-1 bpdaHE"
  >
    <h1
      class="accordion__Title-sc-l3iym9-5 eFLbmG"
    >
      Frequently Asked Questions
    </h1>
    <div
      class="accordion__Frame-sc-l3iym9-4 kMbVuT"
    >
      <div
        class="accordion__Item-sc-l3iym9-6 fWxYPy"
      >
        <div
          class="accordion__Header-sc-l3iym9-2 cTNkLK"
        >
          What is Netflix?
        </div>
      </div>
      <div
        class="accordion__Item-sc-l3iym9-6 fWxYPy"
      >
        <div
          class="accordion__Header-sc-l3iym9-2 cTNkLK"
        >
          How much does Netflix cost?
        </div>
      </div>
      <div
        class="accordion__Item-sc-l3iym9-6 fWxYPy"
      >
        <div
          class="accordion__Header-sc-l3iym9-2 cTNkLK"
        >
          Where can I watch?
        </div>
      </div>
      <div
        class="accordion__Item-sc-l3iym9-6 fWxYPy"
      >
        <div
          class="accordion__Header-sc-l3iym9-2 cTNkLK"
        >
          How do I cancel?
        </div>
      </div>
      <div
        class="accordion__Item-sc-l3iym9-6 fWxYPy"
      >
        <div
          class="accordion__Header-sc-l3iym9-2 cTNkLK"
        >
          What can I watch on Netflix?
        </div>
      </div>
    </div>
    <div
      class="accordion__Item-sc-l3iym9-6 fWxYPy"
    />
  </div>
</div>
`;

exports[`<Accordion /> renders the <Accordion /> 1`] = `
<div
  class="accordion__Container-sc-l3iym9-0 hCrOLg"
>
  <div
    class="accordion__Inner-sc-l3iym9-1 bpdaHE"
  >
    <h1
      class="accordion__Title-sc-l3iym9-5 eFLbmG"
    >
      Frequently Asked Questions
    </h1>
    <div
      class="accordion__Item-sc-l3iym9-6 fWxYPy"
    >
      <div
        class="accordion__Header-sc-l3iym9-2 cTNkLK"
      >
        What is Netflix?
      </div>
    </div>
    <div
      class="accordion__Item-sc-l3iym9-6 fWxYPy"
    >
      <div
        class="accordion__Header-sc-l3iym9-2 cTNkLK"
      >
        How much does Netflix cost?
      </div>
    </div>
    <div
      class="accordion__Item-sc-l3iym9-6 fWxYPy"
    >
      <div
        class="accordion__Header-sc-l3iym9-2 cTNkLK"
      >
        Where can I watch?
      </div>
    </div>
    <div
      class="accordion__Item-sc-l3iym9-6 fWxYPy"
    >
      <div
        class="accordion__Header-sc-l3iym9-2 cTNkLK"
      >
        How do I cancel?
      </div>
    </div>
    <div
      class="accordion__Item-sc-l3iym9-6 fWxYPy"
    >
      <div
        class="accordion__Header-sc-l3iym9-2 cTNkLK"
      >
        What can I watch on Netflix?
      </div>
    </div>
    <div
      class="accordion__Item-sc-l3iym9-6 fWxYPy"
    />
  </div>
</div>
`;
